[gd_scene load_steps=4 format=3 uid="uid://clrsiuu32yym8"]

[ext_resource type="PackedScene" uid="uid://upvdf7vyxt7x" path="res://Project/Environment/team.tscn" id="1_2rx8r"]
[ext_resource type="Script" path="res://Project/%Scripts/shop.gd" id="1_gkiq6"]
[ext_resource type="PackedScene" uid="uid://bjvcii02gslih" path="res://Project/Environment/slot.tscn" id="3_u3rj0"]

[node name="Shop" type="Node2D"]
script = ExtResource("1_gkiq6")

[node name="temp2" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 2
color = Color(0.498039, 0.498039, 0.498039, 1)

[node name="Team" parent="." instance=ExtResource("1_2rx8r")]
position = Vector2(960, 540)

[node name="Stock1" parent="." instance=ExtResource("3_u3rj0")]
position = Vector2(150, 400)
id = 6

[node name="Stock2" parent="." instance=ExtResource("3_u3rj0")]
position = Vector2(370, 470)
id = 7

[node name="Stock3" parent="." instance=ExtResource("3_u3rj0")]
position = Vector2(150, 540)
id = 8

[node name="Stock4" parent="." instance=ExtResource("3_u3rj0")]
position = Vector2(370, 610)
id = 9

[node name="Stock5" parent="." instance=ExtResource("3_u3rj0")]
position = Vector2(150, 680)
id = 10
